# mtk-ohtu

./: .coveragerc  .dockerignore  .env  .env.template  .gitignore  .pylintrc  Dockerfile  README.md  app.py  babel.cfg  compose.ci.yaml  db_mock_data.sql  docker-compose.yaml  init_config.sh  pyproject.toml  pytest.ini  requirements.txt  schema.sql  tasks.py
.github/workflows/: dev_CI.yml  main.yml  staging.yml  test.yml
docs/: Definition_of_done.md  api.md  geojson_example.geojson
docs/Images/: Structure
src/: app.py  config.py  init_config.sh  location.py  route.py  route_calculator.py  route_test_main.py
src/api/: logistics_info_schema.py  routes.py
src/controllers/: example_controller.py  routes.py  session_handler.py
src/database/: database.py  db_enums.py  db_meta.py
src/logic/: listing.py  location.py  logistics.py  logistics_info.py  route_calculator.py  route_stats.py  user.py
src/mtk_ohtu/: app.py  config.py  lang.py  route_test_main.py
src/mtk_ohtu/api/: address_datatype.py  address_schema.py  class_field.py  logistics_info_schema.py  posting_api_schema.py  routes.py
src/mtk_ohtu/controllers/: routes.py  session_handler.py
src/mtk_ohtu/database/: database.py  db_api.py  db_cargo.py  db_contractors.py  db_datastructs.py  db_enums.py  db_listings.py  db_meta.py  db_users.py
src/mtk_ohtu/logic/: cargo_type_info.py  contractor_division.py  listing.py  location.py  logistics.py  logistics_contractor.py  logistics_info.py  logistics_node.py  route_stats.py  (+4 more)
src/routes/: contractor.py  listing.py  location.py  user.py
src/static/: style.css
src/templates/: addlogistics.html  confirmation.html  contractor.html  contractor_list.html  distance.html  index.html  layout.html  listings.html  login.html  product.html  register.html
src/tests/: test_database.py  test_example.py  test_logistics.py
(+44 files in other folders)
