[tool.poetry]
name = "mtk_ohtu"
version = "0.1.0"
description = "A logistics optimization tool for connecting biomass sidestream sellers, buyers and logistics providers."
authors = ["MTK-Ohtu group"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
invoke = "^2.2.0"
python-dotenv = "^1.0.0"
geopy = "^2.4.1"
requests = "^2.31.0"
geographiclib = "^2.0"
werkzeug = "^3.0.1"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
flask-session = "^0.6.0"
geojson = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = "^7.4.0"
pylint = "^3.0.3"
pytest-env = "^1.1.3"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
